tests/lean/cls_err.lean.expected.out
cls_err.lean:13:2: error: failed to synthesize placeholder
A : Type
⊢ H A
